--- a/.github/workflows/superslow_tests.yml
+++ b/.github/workflows/superslow_tests.yml
@@ -35,7 +35,7 @@ jobs:
         uses: actions/checkout@v2
         with:
           submodules: true
-          token: ${{ secrets.GH_ACTION_ACCESS_TOKEN }}
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       # To see the modules in `amp`, PYTHONPATH needs to include `amp` in the
       # same way we do in `setenv.sh`.
@@ -60,7 +60,7 @@ jobs:
       # See the corresponding documentation for more information.
       - name: Run superslow tests
         env:
-          GH_ACTION_ACCESS_TOKEN: ${{ secrets.GH_ACTION_ACCESS_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           AM_AWS_ACCESS_KEY_ID: ${{ secrets.AM_AWS_ACCESS_KEY_ID }}
           AM_AWS_SECRET_ACCESS_KEY: ${{ secrets.AM_AWS_SECRET_ACCESS_KEY }}
           AM_AWS_DEFAULT_REGION: ${{ secrets.AM_AWS_DEFAULT_REGION }}
