--- a/.github/workflows/fast_tests.yml
+++ b/.github/workflows/fast_tests.yml
@@ -118,21 +118,6 @@ jobs:
           sha: ${{ github.sha }}
           target_url: "https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}"
 
-      # TODO(vr): Bring back in #340.
-      # - name: Send Telegram notification for success
-      #   if: ${{ success() && github.ref_name == 'master' }}
-      #   uses: appleboy/telegram-action@master
-      #   with:
-      #     to: ${{ secrets.AM_TG_BUILDBOT_CHATID }}
-      #     token: ${{ secrets.AM_TG_BUILDBOT_TOKEN }}
-      #     message: |
-      #       🎉 Fast tests succeded at master
-      #       Build failure '${{ github.workflow }}'
-      #       Repo: '${{ github.repository }}'
-      #       Branch: '${{ github.ref_name }}'
-      #       Event: '${{ github.event_name }}'
-      #       https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}
-
       # Notify the team via Telegram in case of failure.
       - name: Send Telegram notification for failure
         # Need to use ref_name as it contains the branch that triggered the
@@ -142,8 +127,8 @@ jobs:
         if: ${{ failure() && github.ref_name == 'master' }}
         uses: appleboy/telegram-action@master
         with:
-          to: ${{ secrets.AM_TG_BUILDBOT_CHATID }}
-          token: ${{ secrets.AM_TG_BUILDBOT_TOKEN }}
+          to: ${{ secrets.CK_TG_BUILDBOT_CHATID }}
+          token: ${{ secrets.CK_TG_BUILDBOT_TOKEN }}
           message: |
             💣 FAST TESTS FAILED
             Build failure '${{ github.workflow }}'
