--- a/devops/docker_build/pyproject.toml
+++ b/devops/docker_build/pyproject.toml
@@ -9,7 +9,7 @@ async_solipsism = ">= 0.3"
 boto3 = "*"
 bs4 = "*"
 # It is better to up the version manually for CCXT.
-ccxt = "4.2.13"
+#ccxt = "4.2.13"
 # poetry can't install cvxopt so we install it as pip package later in the flow.
 #cvxopt = ">= 1.3.0"
 # poetry can't install cvxpy so we install it as pip package later in the flow.
@@ -18,14 +18,14 @@ ccxt = "4.2.13"
 # ```
 #cvxpy = ">= 1.2.2"
 # This constraint is needed because 3.4.8 seems to fail.
-cryptography = "<= 3.4.7"
+#cryptography = "<= 3.4.7"
 gspread_pandas = "*"
 #ib_insync = "*"
 # This is needed for `jupyter` extensions.
 importlib-resources = "*"
 invoke = "*"
 # From docs: IPython 8.13+ supports Python 3.9 and above.
-ipython = "<= 8.12.0"
+#ipython = "<= 8.12.0"
 joblib = "*"
 jsonpickle = "*"
 jupyter = "*"
@@ -38,7 +38,7 @@ matplotlib = "*"
 moto = "*"
 networkx = "*"
 # See https://github.com/Jupyter-contrib/jupyter_nbextensions_configurator/issues/164.
-notebook = "< 7.0.0"
+#notebook = "< 7.0.0"
 numpy = "*"
 pandas = ">= 2.1.1"
 psutil = "*"
@@ -51,8 +51,7 @@ pytest-instafail = "*"
 pytest-rerunfailures = "*"
 pytest-timeout = "*"
 pytest-xdist = "*"
-# TODO(Vlad): The version should be restricted to 3.9.*.
-python = ">=3.9,<3.10.dev0"
+python = "*"
 python-dotenv = "*"
 pywavelets = "*"
 requests = "*"
