--- a/.github/workflows/slow_tests.yml
+++ b/.github/workflows/slow_tests.yml
@@ -33,7 +33,7 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.CK_AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.CK_AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ secrets.CK_AWS_DEFAULT_REGION }}
+          aws-region: ${{ vars.CK_AWS_DEFAULT_REGION }}
 
       # This is needed to pull the Docker image.
       - name: Login to Amazon ECR
@@ -86,12 +86,12 @@ jobs:
           
           CK_AWS_ACCESS_KEY_ID: ${{ secrets.CK_AWS_ACCESS_KEY_ID }}
           CK_AWS_SECRET_ACCESS_KEY: ${{ secrets.CK_AWS_SECRET_ACCESS_KEY }}
-          CK_AWS_DEFAULT_REGION: ${{ secrets.CK_AWS_DEFAULT_REGION }}
+          CK_AWS_DEFAULT_REGION: ${{ vars.CK_AWS_DEFAULT_REGION }}
           # CK_ECR_BASE_PATH: ${{ secrets.CK_ECR_BASE_PATH }}
           # If you prefer pulling the image from ECR, comment out the following line and uncomment the one above.
           # Base path for GHCR registry.
           CK_ECR_BASE_PATH: ghcr.io/cryptokaizen
-          CK_AWS_S3_BUCKET: ${{ secrets.CK_AWS_S3_BUCKET }}
+          CK_AWS_S3_BUCKET: ${{ vars.CK_AWS_S3_BUCKET }}
           CK_TELEGRAM_TOKEN: ${{ secrets.CK_TELEGRAM_TOKEN }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         # https://github.community/t/dont-run-actions-on-draft-pull-requests/16817/19
