--- a/.github/workflows/superslow_tests.yml
+++ b/.github/workflows/superslow_tests.yml
@@ -18,7 +18,7 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.CK_AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.CK_AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ secrets.CK_AWS_DEFAULT_REGION }}
+          aws-region: ${{ vars.CK_AWS_DEFAULT_REGION }}
 
       # This is needed to pull the Docker image.
       - name: Login to Amazon ECR
@@ -64,9 +64,9 @@ jobs:
           
           CK_AWS_ACCESS_KEY_ID: ${{ secrets.CK_AWS_ACCESS_KEY_ID }}
           CK_AWS_SECRET_ACCESS_KEY: ${{ secrets.CK_AWS_SECRET_ACCESS_KEY }}
-          CK_AWS_DEFAULT_REGION: ${{ secrets.CK_AWS_DEFAULT_REGION }}
+          CK_AWS_DEFAULT_REGION: ${{ vars.CK_AWS_DEFAULT_REGION }}
           CK_ECR_BASE_PATH: ${{ secrets.CK_ECR_BASE_PATH }}
-          CK_AWS_S3_BUCKET: ${{ secrets.CK_AWS_S3_BUCKET }}
+          CK_AWS_S3_BUCKET: ${{ vars.CK_AWS_S3_BUCKET }}
           CK_TELEGRAM_TOKEN: ${{ secrets.CK_TELEGRAM_TOKEN }}
         run: invoke run_superslow_tests
 
