--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -67,7 +67,7 @@ jobs:
           CK_AWS_ACCESS_KEY_ID: ${{ secrets.CK_AWS_ACCESS_KEY_ID }}
           CK_AWS_SECRET_ACCESS_KEY: ${{ secrets.CK_AWS_SECRET_ACCESS_KEY }}
           CK_AWS_DEFAULT_REGION: ${{ vars.CK_AWS_DEFAULT_REGION }}
-          # CK_ECR_BASE_PATH: ${{ secrets.CK_ECR_BASE_PATH }}
+          # CK_ECR_BASE_PATH: ${{ vars.CK_ECR_BASE_PATH }}
           # If you prefer pulling the image from ECR, comment out the following line and uncomment the one above.
           # Base path for GHCR registry.
           CK_ECR_BASE_PATH: ghcr.io/cryptokaizen
