--- a/.github/workflows/superslow_tests.yml
+++ b/.github/workflows/superslow_tests.yml
@@ -53,7 +53,7 @@ jobs:
       - name: Pull image
         if: github.event.pull_request.draft == false
         env:
-          CK_ECR_BASE_PATH: ${{ secrets.CK_ECR_BASE_PATH }}
+          CK_ECR_BASE_PATH: ${{ vars.CK_ECR_BASE_PATH }}
         run: invoke docker_pull
 
       # Run the `invoke` target `run_superslow_tests` to run tests that are over 30 seconds.
@@ -65,7 +65,7 @@ jobs:
           CK_AWS_ACCESS_KEY_ID: ${{ secrets.CK_AWS_ACCESS_KEY_ID }}
           CK_AWS_SECRET_ACCESS_KEY: ${{ secrets.CK_AWS_SECRET_ACCESS_KEY }}
           CK_AWS_DEFAULT_REGION: ${{ vars.CK_AWS_DEFAULT_REGION }}
-          CK_ECR_BASE_PATH: ${{ secrets.CK_ECR_BASE_PATH }}
+          CK_ECR_BASE_PATH: ${{ vars.CK_ECR_BASE_PATH }}
           CK_AWS_S3_BUCKET: ${{ vars.CK_AWS_S3_BUCKET }}
           CK_TELEGRAM_TOKEN: ${{ secrets.CK_TELEGRAM_TOKEN }}
         run: invoke run_superslow_tests
