--- a/devops/docker_build/pyproject.toml
+++ b/devops/docker_build/pyproject.toml
@@ -5,19 +5,11 @@ description = ""
 authors = ["GP Saggese <gp@kaizen-tech.io>"]
 
 [tool.poetry.dependencies]
-#async_solipsism = ">= 0.3"
-async_solipsism = "*"
+async_solipsism = ">= 0.3"
 boto3 = "*"
 #bs4 = "*"
 # It is better to up the version manually for CCXT.
 #ccxt = "4.2.13"
-# poetry can't install cvxopt so we install it as pip package later in the flow.
-#cvxopt = ">= 1.3.0"
-# poetry can't install cvxpy so we install it as pip package later in the flow.
-# ```
-# ERROR: cvxpy-1.2.2-cp38-cp38-manylinux_2_24_x86_64.whl is not a supported wheel on this platform.
-# ```
-#cvxpy = ">= 1.2.2"
 # This constraint is needed because 3.4.8 seems to fail.
 #cryptography = "<= 3.4.7"
 #gspread_pandas = "*"
@@ -41,13 +33,14 @@ networkx = "*"
 # See https://github.com/Jupyter-contrib/jupyter_nbextensions_configurator/issues/164.
 #notebook = "< 7.0.0"
 numpy = "*"
-#pandas = ">= 2.1.1"
-pandas = "*"
+pandas = ">= 2.1.1"
+#pandas = "*"
 psutil = "*"
 psycopg2-binary = "*"
 #pyarrow = ">=15.0.0"
 pyarrow = "*"
 #pygraphviz = "*"
+python = ">= 3.12"
 pytest = "*"
 pytest-cov = "*"
 pytest-instafail = "*"
