Revert GITHUB_TOKEN to GH_ACTION_ACCESS_TOKEN

--- a/.github/workflows/slow_tests.yml
+++ b/.github/workflows/slow_tests.yml
@@ -93,7 +93,7 @@ jobs:
           #CK_ECR_BASE_PATH: ghcr.io/cryptokaizen
           CK_AWS_S3_BUCKET: ${{ vars.CK_AWS_S3_BUCKET }}
           CK_TELEGRAM_TOKEN: ${{ secrets.CK_TELEGRAM_TOKEN }}
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GH_ACTION_ACCESS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         # https://github.community/t/dont-run-actions-on-draft-pull-requests/16817/19
         # Do not run on draft pull requests.
         if: github.event.pull_request.draft == false
