--- a/pytest.ini
+++ b/pytest.ini
@@ -6,6 +6,7 @@ norecursedirs =
   dev_scripts/old
   helpers/old
   im/ib/data/extract/gateway
+  notebooks  
 
 #ignore = .git im/ib/data/extract/gateway
 #ignore-glob = notebooks* old/*
