CmampTask10898_Rename_remove_env_vars_in_all_repos (#122)
* Remove reference to AM_AWS_PROFILE

* Rename CI en var to CSFY_CI

* Revert change

* Revert change

* Replace CI with CSFY_CI

--- a/.github/workflows/fast_tests.yml
+++ b/.github/workflows/fast_tests.yml
@@ -19,6 +19,8 @@ on:
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
+env:
+  CSFY_CI: true
 jobs:
   run_fast_tests:
     runs-on: ubuntu-latest
