CmampTask10898_Rename_remove_env_vars_in_all_repos_3 (#146)
* Rename AM_ENABLED_DIND to CSFY_ENABLE_DIND

* Rename AM_FORCE_TEST_FAIL to CSFY_FORCE_TEST_FAIL

* Rename AM_HOST_NAME to CSFY_HOST_NAME

* Rename AM_HOST_OS_NAME to CSFY_HOST_OS_NAME

* Rename AM_ to CSFY_

* Rename CK_ECR_ to CSFY_ECR_

* Rename CK_AWS_ to CSFY_AWS_

* Rename CK_TELEGRAM_TOKEN to CSFY_TELEGRAM_TOKEN

* Add hack for _get_aws_config_text

* Remove unnecessary file

* Add hack for _get_aws_credentials_text

* Revert bad replace

* Adjust a hack

* Modify hack

* Update test outcome

* Update test repo config outcome

--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -21,9 +21,9 @@ jobs:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
-          aws-access-key-id: ${{ secrets.CK_AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.CK_AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ vars.CK_AWS_DEFAULT_REGION }}
+          aws-access-key-id: ${{ secrets.CSFY_AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.CSFY_AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ vars.CSFY_AWS_DEFAULT_REGION }}
 
       # # This is needed to pull the Docker image.
       - name: Login to Amazon ECR
@@ -65,15 +65,15 @@ jobs:
         # Do not run on draft pull requests.
         if: github.event.pull_request.draft == false
         env:
-          CK_AWS_ACCESS_KEY_ID: ${{ secrets.CK_AWS_ACCESS_KEY_ID }}
-          CK_AWS_SECRET_ACCESS_KEY: ${{ secrets.CK_AWS_SECRET_ACCESS_KEY }}
-          CK_AWS_DEFAULT_REGION: ${{ vars.CK_AWS_DEFAULT_REGION }}
-          # CK_ECR_BASE_PATH: ${{ vars.CK_ECR_BASE_PATH }}
+          CSFY_AWS_ACCESS_KEY_ID: ${{ secrets.CSFY_AWS_ACCESS_KEY_ID }}
+          CSFY_AWS_SECRET_ACCESS_KEY: ${{ secrets.CSFY_AWS_SECRET_ACCESS_KEY }}
+          CSFY_AWS_DEFAULT_REGION: ${{ vars.CSFY_AWS_DEFAULT_REGION }}
+          # CSFY_ECR_BASE_PATH: ${{ vars.CSFY_ECR_BASE_PATH }}
           # If you prefer pulling the image from ECR, comment out the following line and uncomment the one above.
           # Base path for GHCR registry.
-          CK_ECR_BASE_PATH: ghcr.io/cryptokaizen
-          CK_AWS_S3_BUCKET: ${{ vars.CK_AWS_S3_BUCKET }}
-          CK_TELEGRAM_TOKEN: ${{ secrets.CK_TELEGRAM_TOKEN }}
+          CSFY_ECR_BASE_PATH: ghcr.io/cryptokaizen
+          CSFY_AWS_S3_BUCKET: ${{ vars.CSFY_AWS_S3_BUCKET }}
+          CSFY_TELEGRAM_TOKEN: ${{ secrets.CSFY_TELEGRAM_TOKEN }}
           GH_ACTION_ACCESS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         # To run the linter, fetch the master branch for comparison with the
         # current branch.
