Dev tools task615 move linter to helpers (#203)
* DevToolsTask615: Move Linter to helpers

* DevToolsTask615: Remove tmp files; move tests

* DevToolsTask615: Update path in test

* DevToolsTask615: Update changelog

--- a/mypy.ini
+++ b/mypy.ini
@@ -1,10 +1,12 @@
 [mypy]
 
+mypy_path = helpers_root
+
 # TODO(gp): Once in a while we should disabled all this and check which
 # libraries have added types to their interfaces.
 
 # TODO(gp): Update to Python 3.9.
-python_version = 3.7
+python_version = 3.12
 
 # Display error codes.
 show_error_codes = True
@@ -30,6 +32,9 @@ show_error_codes = True
 # Disallow defining functions without type annotations or with incomplete type
 # annotations.
 disallow_untyped_defs = True
+
+# Disallow returning values of type Any.
+disallow_any_explicit = True
 
 # Disallow defining functions with incomplete type annotations.
 disallow_incomplete_defs = True
@@ -62,9 +67,6 @@ follow_imports=skip
 #
 # Libraries with no stubs.
 #
-
-[mypy-async_solipsism]
-ignore_missing_imports = True
 
 [mypy-bs4]
 ignore_missing_imports = True
