--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -68,10 +68,11 @@ jobs:
           CSFY_AWS_ACCESS_KEY_ID: ${{ secrets.CSFY_AWS_ACCESS_KEY_ID }}
           CSFY_AWS_SECRET_ACCESS_KEY: ${{ secrets.CSFY_AWS_SECRET_ACCESS_KEY }}
           CSFY_AWS_DEFAULT_REGION: ${{ vars.CSFY_AWS_DEFAULT_REGION }}
-          # CSFY_ECR_BASE_PATH: ${{ vars.CSFY_ECR_BASE_PATH }}
-          # If you prefer pulling the image from ECR, comment out the following line and uncomment the one above.
+          # Base path for ECR registry.
+          CSFY_ECR_BASE_PATH: ${{ vars.CSFY_ECR_BASE_PATH }}
+          # If you prefer pulling the image from GHCR, uncomment out the following line and comment the one above.
           # Base path for GHCR registry.
-          CSFY_ECR_BASE_PATH: ghcr.io/cryptokaizen
+          # CSFY_ECR_BASE_PATH: ghcr.io/cryptokaizen
           CSFY_AWS_S3_BUCKET: ${{ vars.CSFY_AWS_S3_BUCKET }}
           CSFY_TELEGRAM_TOKEN: ${{ secrets.CSFY_TELEGRAM_TOKEN }}
           GH_ACTION_ACCESS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
