CmampTask11020_Compute_yamm_stats_4 (#245)
* Update

* Update

--- a/mypy.ini
+++ b/mypy.ini
@@ -33,8 +33,8 @@ show_error_codes = True
 # annotations.
 disallow_untyped_defs = True
 
-# Disallow returning values of type Any.
-disallow_any_explicit = True
+# Allow returning values of type Any.
+disallow_any_explicit = False
 
 # Disallow defining functions with incomplete type annotations.
 disallow_incomplete_defs = True
