HelpersTask348_helpersprod_error_on_GH_actions (#349)
* HelpersTask348: ssh

* HelpersTask348: pull

* HelpersTask348: delete comment

* HelpersTask348: linter

* HelpersTask348: comment

---------

Co-authored-by: vlady <v.yakovenko@crypto-kaizen.com>

--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -58,6 +58,13 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r .github/gh_requirements.txt
 
+      # Pull the `helpers:prod` image to run the Linter on it.
+      - name: Pull helpers:prod image
+        if: github.event.pull_request.draft == false
+        env:
+          CSFY_ECR_BASE_PATH: ${{ vars.CSFY_ECR_BASE_PATH }}
+        run: invoke docker_pull_helpers
+
       # Run the linter, then check if any file was changed after that. If so,
       # fail the job.
       - name: Check if the Linter was run
