--- a/dev_scripts_helpers/thin_client/requirements.txt
+++ b/dev_scripts_helpers/thin_client/requirements.txt
@@ -11,6 +11,6 @@ poetry
 pytest >= 6.0.0
 s3fs  # For tools like `publish_notebook.py`.
 tqdm
-# On Mac there is an issue related to this package, so you might want to pin it
-# down.
+# On Mac and locally on Linux there is an issue related to this package
+# (see HelpersTask377), so we might want to pin it down.
 # pyyaml == 5.3.1
