Cmamptask11656_Post_status_if_was_triggered_manually (#556)
* Cmamptask11656: update action

* Cmamptask11656: fix branch

* Cmamptask11656: delete commented

* Cmamptask11656: linter

* Cmamptask11656: fail test

* Cmamptask11656: permission

* Cmamptask11656: revert

* Cmamptask11656: lint

---------

Co-authored-by: vlady <v.yakovenko@crypto-kaizen.com>

--- a/.github/workflows/common_linter.yml
+++ b/.github/workflows/common_linter.yml
@@ -11,6 +11,8 @@ permissions:
   contents: read
   # This is required for pulling the Docker image from GHCR.
   packages: read
+  # This is required for posting the status of the job when triggered manually.
+  statuses: write
 jobs:
   Run_linter:
     # We expect user to not execute manual run in a draft PR.
@@ -86,7 +88,7 @@ jobs:
 
       - name: Post status if triggered manually
         if: ${{ always() && github.event_name == 'workflow_dispatch' }}
-        uses: Sibz/github-status-action@v1
+        uses: guibranco/github-status-action-v2@main
         with:
           authToken: ${{ secrets.GITHUB_TOKEN }}
           context: "Run_linter"
