--- a/.github/workflows/common_run_tests.yml
+++ b/.github/workflows/common_run_tests.yml
@@ -23,6 +23,8 @@ permissions:
   contents: read
   # This is required for pulling the Docker image from GHCR.
   packages: read
+  # This is required for posting the status of the job when triggered manually.
+  statuses: write
 jobs:
   run_tests:
     # We expect user to not execute manual run in a draft PR.
@@ -98,7 +100,7 @@ jobs:
       # Blank with no info and skipped otherwise.
       - name: Post status if was triggered manually
         if: ${{ always() && github.event_name == 'workflow_dispatch' }}
-        uses: Sibz/github-status-action@v1
+        uses: guibranco/github-status-action-v2@main
         with:
           authToken: ${{ secrets.GITHUB_TOKEN }}
           context: ${{ inputs.test-name }}
