CmampTask11862_Allow_dind_unit_tests_to_run_on_server_and_CI_1 (#561)
* Update

* Update

* Update

* Improve

--- a/dev_scripts_helpers/thin_client/requirements.txt
+++ b/dev_scripts_helpers/thin_client/requirements.txt
@@ -14,3 +14,4 @@ tqdm
 # On Mac and locally on Linux there is an issue related to this package
 # (see HelpersTask377), so we might want to pin it down.
 # pyyaml == 5.3.1
+pyyaml
