CmampTask11789_Make_cmamp_GitHub_Actions_workflows_reusable (#505)
* CmampTask11789: fix submodules

* CmampTask11789: path

* CmampTask11789: fix in the common_run_tests.yml

* CmampTask11789: depth

* CmampTask11789: ssh

* CmampTask11789: name

* CmampTask11789: swap names

* CmampTask11789: change var

* CmampTask11789: caller

* CmampTask11789: test secrets

* CmampTask11789: playing around

* CmampTask11789: one more token

* CmampTask11789: secrets

* CmampTask11789: fix submodules

* CmampTask11789: path

* CmampTask11789: fix in the common_run_tests.yml

* CmampTask11789: depth

* CmampTask11789: ssh

* CmampTask11789: name

* CmampTask11789: swap names

* CmampTask11789: change var

* CmampTask11789: caller

* CmampTask11789: test secrets

* CmampTask11789: playing around

* CmampTask11789: one more token

* CmampTask11789: secrets

* CmampTask11789: revert debug and change token

* CmampTask11789: fix token

* CmampTask11789: revert token

* CmampTask11789: script for PYTHONPATH

* CmampTask11789: delete ssh update pythonpath

* CmampTask11789: simplify

* CmampTask11789: recursive

* CmampTask11789: lint and delete script

* CmampTask11789: comment

* CmampTask11789: remove unnecessary comments

* CmampTask11789: comment

* CmampTask11789: echo

---------

Co-authored-by: vlady <v.yakovenko@crypto-kaizen.com>
Co-authored-by: Samarth KaPatel <samarth.kapatel5@gmail.com>

--- a/.github/workflows/common_linter.yml
+++ b/.github/workflows/common_linter.yml
@@ -54,7 +54,15 @@ jobs:
           # in order to compare the current branch with the master branch.
           # The `0` means unlimited depth.
           fetch-depth: 0
+          submodules: true
           token: ${{ secrets.GITHUB_TOKEN }}
+
+      # To access modules in `amp` and `helpers_root`, make sure PYTHONPATH includes
+      # them, just as it's set in `setenv.sh`.
+      # TODO(Grisha): re-use the approach from `dev_scripts_cmamp/thin_client/setenv.sh`.
+      - name: Update PYTHONPATH
+        if: ${{ github.event.repository.name != 'helpers' }}
+        run: echo "PYTHONPATH=.:helpers_root" >> $GITHUB_ENV
 
       # Install packages that are required to run the job via GH.
       - name: Install dependencies
