--- a/pytest.ini
+++ b/pytest.ini
@@ -6,7 +6,7 @@ norecursedirs =
   dev_scripts/old
   helpers/old
   im/ib/data/extract/gateway
-  notebooks  
+  notebooks
 
 #ignore = .git im/ib/data/extract/gateway
 #ignore-glob = notebooks* old/*
@@ -29,7 +29,7 @@ addopts =
 markers=
   requires_ck_infra: require to run inside CK infrastructure
   requires_ck_aws: require CK AWS connection
-  requires_docker_in_docker: require docker-in-docker or docker sibling containers
+  requires_docker_in_docker: require docker children or sibling containers
   no_container: run without a container, i.e., `invoke` target tests
   slow: tests that are considered slow
   superslow: tests that are considered superslow
