CmampTask11073_Add_pre_commit_hooks_to_scan_for_secrets_2 (#631)
* Checkpoint

Pre-commit checks:
- 'check_master' passed
- 'check_author' passed
- 'check_file_size' passed
- 'check_python_compile' passed
- 'check_gitleaks' passed
All checks passed ✅

* Checkpoint

Pre-commit checks:
- 'check_master' passed
- 'check_author' passed
- 'check_file_size' passed
- 'check_python_compile' passed
- 'check_gitleaks' passed
All checks passed ✅

* checkpoint

* Checkpoint

Pre-commit checks:
- 'check_master' passed
- 'check_author' passed
- 'check_file_size' passed
- 'check_python_compile' passed
- 'check_gitleaks' passed
All checks passed ✅

* Checkpoint

Pre-commit checks:
- 'check_master' passed
- 'check_author' passed
- 'check_file_size' passed
- 'check_python_compile' passed
- 'check_gitleaks' passed
All checks passed ✅

* Checkpoint

Pre-commit checks:
- 'check_master' passed
- 'check_author' passed
- 'check_file_size' passed
- 'check_python_compile' passed
- 'check_gitleaks' passed
All checks passed ✅

* Nit

Pre-commit checks:
- 'check_master' passed
- 'check_author' passed
- 'check_file_size' passed
- 'check_python_compile' passed
- 'check_gitleaks' passed
All checks passed ✅

--- a/repo_config.yaml
+++ b/repo_config.yaml
@@ -9,6 +9,8 @@ repo_info:
   invalid_words:
   # Prefix of the issue in the repo, e.g., `HelpersTask`, `CmampTask`.
   issue_prefix: HelpersTask
+  # Enable git-commit hooks.
+  enable_git_commit_hook: True
 
 docker_info:
   # Base name of the docker image, e.g., `helpers`.
