HelpersTask656__Use_bool_for_use_helpers_as_nested_module_var_in_repo_config (#670)
* Checkpoint

Pre-commit checks:
- 'check_master' passed
- 'check_author' passed
- 'check_file_size' passed
- 'check_python_compile' passed
- 'check_gitleaks' passed
All checks passed ✅

* Update

Pre-commit checks:
- 'check_master' passed
- 'check_author' passed
- 'check_file_size' passed
- 'check_python_compile' passed
- 'check_gitleaks' passed
All checks passed ✅

* Checkpoint

Pre-commit checks:
- 'check_master' passed
- 'check_author' passed
- 'check_file_size' passed
- 'check_python_compile' passed
- 'check_gitleaks' passed
All checks passed ✅

* Update

Pre-commit checks:
- 'check_master' passed
- 'check_author' passed
- 'check_file_size' passed
- 'check_python_compile' passed
- 'check_gitleaks' passed
All checks passed ✅

* Checkpoint

Pre-commit checks:
- 'check_master' passed
- 'check_author' passed
- 'check_file_size' passed
- 'check_python_compile' passed
- 'check_gitleaks' passed
All checks passed ✅

* Checkpoint

Pre-commit checks:
- 'check_master' passed
- 'check_author' passed
- 'check_file_size' passed
- 'check_python_compile' passed
- 'check_gitleaks' passed
All checks passed ✅

--- a/repo_config.yaml
+++ b/repo_config.yaml
@@ -27,6 +27,6 @@ container_registry_info:
   ghcr: ghcr.io/cryptokaizen
 
 runnable_dir_info:
-  use_helpers_as_nested_module: 0
+  use_helpers_as_nested_module: False
   venv_tag: helpers
   dir_suffix: helpers
